tree-sitter-simplex/test/corpus/lambda.test
===================
Test a model using a lambda function
===================
// Make sure lambda works correctly.
fun test_lambda(a: Int): Int do
  let x : (Int,Int):Int = lambda:Int(a: Int, b: Int) do a+b end in
     x(a, 8)
   end
end

val t: Int = test_lambda(3)/2

// And check that recursion in functions works.
fun fact(n: Int): Int do
  if n == 0 then 1
  else n * fact(n - 1)
  end
end

produce(n) do
  print(["Factorial of 5 = ", fact(5)])
end


produce(t) do
   t
end
----

    (source_file
      (comment)
      (definition
        (funDef
          (id)
          (params
            (param
              (id)
              (simpleType
                (id))))
          (simpleType
            (id))
          (letExpr
            (bindings
              (binding
                (id)
                (funType
                  (types
                    (simpleType
                      (id))
                    (simpleType
                      (id)))
                  (simpleType
                    (id)))
                (lambda
                  (simpleType
                    (id))
                  (params
                    (param
                      (id)
                      (simpleType
                        (id)))
                    (param
                      (id)
                      (simpleType
                        (id))))
                  (add
                    (ref
                      (id))
                    (addOp)
                    (ref
                      (id))))))
            (funCall
              (ref
                (id))
              (exprs
                (ref
                  (id))
                (litint))))))
      (definition
        (varDef
          (id)
          (simpleType
            (id))
          (multiply
            (funCall
              (ref
                (id))
              (exprs
                (litint)))
            (multOp)
            (litint))))
      (comment)
      (definition
        (funDef
          (id)
          (params
            (param
              (id)
              (simpleType
                (id))))
          (simpleType
            (id))
          (cond
            (condClause
              (compare
                (ref
                  (id))
                (compOp)
                (litint))
              (litint))
            (multiply
              (ref
                (id))
              (multOp)
              (funCall
                (ref
                  (id))
                (exprs
                  (add
                    (ref
                      (id))
                    (addOp)
                    (litint))))))))
      (product
        (id)
        (funCall
          (ref
            (id))
          (exprs
            (array
              (exprs
                (litstr)
                (funCall
                  (ref
                    (id))
                  (exprs
                    (litint))))))))
      (product
        (id)
        (ref
          (id))))
